--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Unidad 2</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: linear-gradient(135deg, #f3e5f5, #ce93d8);
+      margin: 0;
+      padding: 40px 20px;
+      color: #222;
+    }
+
+    .contenedor {
+      max-width: 700px;
+      margin: auto;
+      background: #fff;
+      border-radius: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+      padding: 30px 40px;
+      transition: transform 0.3s;
+    }
+
+    .contenedor:hover {
+      transform: scale(1.02);
+    }
+
+    h2 {
+      text-align: center;
+      color: #6a1b9a;
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      color: #8e24aa;
+      border-left: 5px solid #ab47bc;
+      padding-left: 10px;
+      margin-top: 25px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 12px 0;
+    }
+
+    a {
+      display: block;
+      padding: 12px 18px;
+      background: #8e24aa;
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
+      font-weight: bold;
+      transition: all 0.25s ease-in-out;
+    }
+
+    a:hover {
+      background: #6a1b9a;
+      transform: translateX(5px);
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 25px;
+      font-size: 0.9em;
+      color: #555;
+    }
+
+    .unidad {
+      margin-top: 40px;
+    }
+
+    .unidad h2::before {
+      content: "📗 ";
+    }
+  </style>
+</head>
+<body>
+
+  <div class="contenedor">
+    <div class="unidad">
+      <h2>Unidad 2</h2>
+
+      <h3>Tareas</h3>
+      <ul>
+        <li><a href="unidad2_tarea1.html" target="_blank">Método del Punto Fijo</a></li>
+        <li><a href="unidad2_tarea2.html" target="_blank">Método de Secante</a></li>
+        <li><a href="unidad2_tarea3.html" target="_blank">Método de Bisección aplicado</a></li>
+        <li><a href="unidad2_tarea4.html" target="_blank">Comparación entre métodos iterativos</a></li>
+        <li><a href="unidad2_tarea5.html" target="_blank">Errores absolutos y relativos</a></li>
+        <li><a href="unidad2_tarea6.html" target="_blank">Análisis de convergencia</a></li>
+      </ul>
+    </div>
+
+    <footer>© 2025 - Plataforma de Actividades</footer>
+  </div>
+
+</body>
+</html>
 
