--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <p>Ver proyectos de la Unidad 1</p>
       </div>
 
-      <div class="unit-card" onclick="openUnit('unidad2.html')">
+      <div class="unit-card" onclick="openUnit('unidad_2/unidad2.html')">
         <h3>📗 Unidad 2</h3>
         <p>Ver proyectos de la Unidad 2</p>
       </div>
