Update task links in unidad2.html

--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -89,12 +89,11 @@
 
       <h3>Tareas</h3>
       <ul>
-        <li><a href="unidad2_tarea1.html" target="_blank">Método del Punto Fijo</a></li>
+        <li><a href="unidad2_tarea1.html" target="_blank">Indice H</a></li>
         <li><a href="unidad2_tarea2.html" target="_blank">Método de Secante</a></li>
-        <li><a href="unidad2_tarea3.html" target="_blank">Método de Bisección aplicado</a></li>
-        <li><a href="unidad2_tarea4.html" target="_blank">Comparación entre métodos iterativos</a></li>
-        <li><a href="unidad2_tarea5.html" target="_blank">Errores absolutos y relativos</a></li>
-        <li><a href="unidad2_tarea6.html" target="_blank">Análisis de convergencia</a></li>
+        <li><a href="unidad2_tarea3.html" target="_blank">Método de Bisección </a></li>
+        <li><a href="unidad2_tarea4.html" target="_blank">Método del punto fijo </a></li>
+        <li><a href="unidad2_tarea5.html" target="_blank">Método de Regula falsi</a></li>
       </ul>
     </div>
 
