--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -89,11 +89,11 @@
 
       <h3>Tareas</h3>
       <ul>
-        <li><a href="unidad2_tarea1.html" target="_blank">Indice H</a></li>
-        <li><a href="unidad2_tarea2.html" target="_blank">Método de Secante</a></li>
-        <li><a href="unidad2_tarea3.html" target="_blank">Método de Bisección </a></li>
-        <li><a href="unidad2_tarea4.html" target="_blank">Método del punto fijo </a></li>
-        <li><a href="unidad2_tarea5.html" target="_blank">Método de Regula falsi</a></li>
+        <li><a href="indice_h.html" target="_blank">Indice H</a></li>
+        <li><a href="secante.html" target="_blank">Método de Secante</a></li>
+        <li><a href="biseccion.html" target="_blank">Método de Bisección </a></li>
+        <li><a href="punto_fijo.html" target="_blank">Método del punto fijo </a></li>
+        <li><a href="regula_falsi.html" target="_blank">Método de Regula falsi</a></li>
       </ul>
     </div>
 
