--- a/unidad_2/biseccion.html
+++ b/unidad_2/biseccion.html
@@ -1,1 +1,123 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Método de Bisección</title>
+  <style>
+    body {
+      font-family: "Consolas", monospace;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #f1f1f1;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #00eaff;
+    }
+    p {
+      text-align: center;
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+    .code-container {
+      background: #1e1e1e;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      max-width: 900px;
+      margin: auto;
+    }
+    pre {
+      background: #1e1e1e;
+      color: #00ffcc;
+      padding: 15px;
+      border-radius: 8px;
+      overflow-x: auto;
+      font-size: 15px;
+      line-height: 1.5;
+    }
+    .buttons {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-bottom: 10px;
+      flex-wrap: wrap;
+    }
+    button, a.pdf-btn {
+      background: #00eaff;
+      color: #000;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    button:hover, a.pdf-btn:hover {
+      background: #00b3cc;
+    }
+  </style>
+</head>
+<body>
+  <h1>📘 Método de Bisección</h1>
+  <p>El método de bisección permite encontrar una raíz al dividir el intervalo en mitades sucesivas hasta alcanzar la tolerancia deseada.</p>
+
+  <div class="code-container">
+    <div class="buttons">
+      <button onclick="copiarCodigo()">📋 Copiar Código</button>
+      <a href="biseccion.pdf" target="_blank" class="pdf-btn">📑 Ver PDF</a>
+    </div>
+
+    <pre id="codigo">
+import math
+
+# Definición de la función
+def f(x):
+    return math.exp(3*x) - 4
+
+a = 0
+b = 1
+tolerancia = 0.1
+
+print(f"{'Iter':<6}{'a':<10}{'b':<10}{'m':<10}{'f(a)':<12}{'f(b)':<12}{'f(m)':<12}{'Error':<10}")
+print("-"*75)
+
+iteracion = 0
+while True:
+    iteracion += 1
+    m = (a + b) / 2
+    fa = f(a)
+    fb = f(b)
+    fm = f(m)
+    error = (b - a) / 2
+
+    print(f"{iteracion:<6}{a:<10.5f}{b:<10.5f}{m:<10.5f}{fa:<12.5f}{fb:<12.5f}{fm:<12.5f}{error:<10.5f}")
+
+    if abs(error) < tolerancia:
+        break
+
+    if fa * fm < 0:
+        b = m
+    else:
+        a = m
+
+print("\nRaíz aproximada: x =", round(m, 4))
+print("Error final:", round(error, 5))
+    </pre>
+  </div>
+
+  <script>
+    function copiarCodigo() {
+      const codigo = document.getElementById("codigo").innerText;
+      navigator.clipboard.writeText(codigo).then(() => {
+        alert("✅ Código copiado al portapapeles");
+      }).catch(() => {
+        alert("❌ Error al copiar el código");
+      });
+    }
+  </script>
+</body>
+</html>
