--- a/unidad_2/regula_falsi.html
+++ b/unidad_2/regula_falsi.html
@@ -68,8 +68,8 @@
   <div class="code-container">
     <div class="buttons">
       <button onclick="copiarCodigo()">📋 Copiar Código</button>
-      <a href="tarea5.pdf" target="_blank" class="pdf-btn">📊 Ver teoria</a>
-      <a href="tarea5_diapositivas.pdf" target="_blank" class="pdf-btn">📑 Ver Diapositivas</a>
+      <a href="regula_falsi.pdf" target="_blank" class="pdf-btn">📊 Ver teoria</a>
+      <a href="presentacion.pdf" target="_blank" class="pdf-btn">📑 Ver Diapositivas</a>
     </div>
 
     <pre id="codigo">
