--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
-      background: linear-gradient(135deg, #f3e5f5, #ce93d8);
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
       margin: 0;
       padding: 40px 20px;
       color: #222;
@@ -28,14 +28,14 @@
 
     h2 {
       text-align: center;
-      color: #6a1b9a;
+      color: #0d47a1;
       font-size: 2em;
       margin-bottom: 10px;
     }
 
     h3 {
-      color: #8e24aa;
-      border-left: 5px solid #ab47bc;
+      color: #1565c0;
+      border-left: 5px solid #1976d2;
       padding-left: 10px;
       margin-top: 25px;
     }
@@ -52,7 +52,7 @@
     a {
       display: block;
       padding: 12px 18px;
-      background: #8e24aa;
+      background: #1976d2;
       color: white;
       text-decoration: none;
       border-radius: 10px;
@@ -61,7 +61,7 @@
     }
 
     a:hover {
-      background: #6a1b9a;
+      background: #0d47a1;
       transform: translateX(5px);
     }
 
