Add new links to unidad2.html

--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -94,6 +94,12 @@
         <li><a href="biseccion.html" target="_blank">Método de Bisección </a></li>
         <li><a href="punto_fijo.html" target="_blank">Método del punto fijo </a></li>
         <li><a href="regula_falsi.html" target="_blank">Método de Regula falsi</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Gradiente de una funcion</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Analisis del WA</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Juegos de supervivencia</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Resumen de articulo</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Diferenciacion numerica</a></li>
+        <li><a href="regula_falsi.html" target="_blank">Interpolacion</a></li>
       </ul>
     </div>
 
