Update task links to new directory structure

--- a/unidad_1/unidad1.html
+++ b/unidad_1/unidad1.html
@@ -90,12 +90,12 @@
 
       <h3>Tareas</h3>
       <ul>
-        <li><a href="primera_tarea.html" target="_blank">Identificación de funciones</a></li>
-        <li><a href="segunda_tarea.html" target="_blank">Graficador de funciones lineales</a></li>
-        <li><a href="tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolución de ejercicios</a></li>
-        <li><a href="cuarta_tarea.html" target="_blank">Método de Newton Raphson</a></li>
-        <li><a href="quinta_tarea.html" target="_blank">Método de Regula Falsi</a></li>
-        <li><a href="sexta_tarea.html" target="_blank">Métodos restantes</a></li>
+        <li><a href="unidad1/identificador_de_funciones/primera_tarea.html" target="_blank">Identificación de funciones</a></li>
+        <li><a href="unidad1/graficador_de_funciones/segunda_tarea.html" target="_blank">Graficador de funciones lineales</a></li>
+        <li><a href="unidad1/resolucion_de_ejercicios/tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolución de ejercicios</a></li>
+        <li><a href="unidad1/newton_rapson/cuarta_tarea.html" target="_blank">Método de Newton Raphson</a></li>
+        <li><a href="unidad1/regula_falsi/quinta_tarea.html" target="_blank">Método de Regula Falsi</a></li>
+        <li><a href="unidad1/metodos_restantes/sexta_tarea.html" target="_blank">Métodos restantes</a></li>
       </ul>
     </div>
 
