--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -89,17 +89,18 @@
 
       <h3>Tareas</h3>
       <ul>
-        <li><a href="indice_h.html" target="_blank">Indice H</a></li>
-        <li><a href="secante.html" target="_blank">Método de Secante</a></li>
-        <li><a href="biseccion.html" target="_blank">Método de Bisección </a></li>
-        <li><a href="punto_fijo.html" target="_blank">Método del punto fijo </a></li>
-        <li><a href="regula_falsi.html" target="_blank">Método de Regula falsi</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Gradiente de una funcion</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Analisis del WA</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Juegos de supervivencia</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Resumen de articulo</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Diferenciacion numerica</a></li>
-        <li><a href="regula_falsi.html" target="_blank">Interpolacion</a></li>
+          <li><a href="unidad2/indice_h/indice_h.html" target="_blank">Índice H</a></li>
+          <li><a href="unidad2/secante/secante.html" target="_blank">Método de Secante</a></li>
+          <li><a href="unidad2/biseccion/biseccion.html" target="_blank">Método de Bisección</a></li>
+          <li><a href="unidad2/punto_fijo/punto_fijo.html" target="_blank">Método del Punto Fijo</a></li>
+          <li><a href="unidad2/regula_falsi/regula_falsi.html" target="_blank">Método de Regula Falsi</a></li>
+          <li><a href="unidad2/gradiente1_2/gradiente1_2.html" target="_blank">Gradiente de una Función</a></li>
+          <li><a href="unidad2/analisis_h/analisis_h.html" target="_blank">Análisis del WA</a></li>
+          <li><a href="unidad2/juegos_supervivencia/juegos_supervivencia.html" target="_blank">Juegos de Supervivencia</a></li>
+          <li><a href="unidad2/resumen_articulo/resumen_articulo.html" target="_blank">Resumen de Artículo</a></li>
+          <li><a href="unidad2/diferenciacion_numerica/diferenciacion_numerica.html" target="_blank">Diferenciación Numérica</a></li>
+          <li><a href="unidad2/interpolacion/interpolacion.html" target="_blank">Interpolación</a></li>
+
       </ul>
     </div>
 
