--- a/unidad_1/unidad1.html
+++ b/unidad_1/unidad1.html
@@ -468,7 +468,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>© 2025 Plataforma Educativa - Universidad de Matemáticas Aplicadas</p>
+            <p>© 2025 Plataforma Educativa - Universidad Nacional del Altiplano Puno</p>
             <div class="footer-links">
                 <a href="#" class="footer-link">Inicio</a>
                 <a href="#" class="footer-link">Unidades</a>
