--- a/unidad_2/Interpolacion/interpolacion.html
+++ b/unidad_2/Interpolacion/interpolacion.html
@@ -482,7 +482,35 @@
         </div>
       </div>
     </header>
+<section class="section">
+      <div class="exercise-card" style="text-align: center;">
+        <div class="exercise-header">
+          <div class="exercise-number"><i class="fas fa-file-pdf"></i></div>
+          <div class="exercise-title">Material de Estudio Completo</div>
+        </div>
+        
+        <p style="margin-bottom: 25px; color: var(--text-gray); font-size: 1.1rem;">
+          Descarga o visualiza el documento completo con todos los conceptos teóricos y ejercicios resueltos de interpolación numérica
+        </p>
 
+        <div class="results-grid" style="max-width: 600px; margin: 0 auto;">
+          <a href="unidad 2/interpolacion/interpolacion.pdf" target="_blank" class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center;">
+            <i class="fas fa-file-pdf"></i>
+            Ver PDF en nueva pestaña
+          </a>
+          
+          <a href="unidad 2/interpolacion/interpolacion.pdf" download class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center; background: linear-gradient(135deg, var(--accent), var(--primary));">
+            <i class="fas fa-download"></i>
+            Descargar PDF
+          </a>
+        </div>
+
+        <div class="highlight-box" style="margin-top: 25px;">
+          <strong><i class="fas fa-info-circle"></i> Nota:</strong> 
+          El documento PDF contiene la teoría completa, demostraciones matemáticas y ejercicios adicionales sobre métodos de interpolación.
+        </div>
+      </div>
+    </section>
     <!-- Interpolación Lineal -->
     <section class="section">
       <h2 class="section-title">
