--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
         
         <div class="units-grid">
             <!-- Unidad 1 -->
-            <div class="unit-card" onclick="window.open('unidad1.html', '_blank')">
+            <div class="unit-card" onclick="window.open('unidad1/unidad1.html', '_blank')">
                 <div class="unit-header">
                     <div class="unit-icon" style="background: linear-gradient(135deg, #4361ee, #3a0ca3);">
                         <i class="fas fa-cube"></i>
@@ -767,7 +767,7 @@
             </div>
 
             <!-- Unidad 2 -->
-            <div class="unit-card" onclick="window.open('unidad_2/unidad2.html', '_blank')">
+            <div class="unit-card" onclick="window.open('unidad2/unidad2.html', '_blank')">
                 <div class="unit-header">
                     <div class="unit-icon" style="background: linear-gradient(135deg, #7209b7, #f72585);">
                         <i class="fas fa-layer-group"></i>
