--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -398,7 +398,7 @@
                     </div>
                     <h3 class="activity-title">Índice H</h3>
                     <p class="activity-desc">Cálculo y análisis del índice H para evaluar productividad científica y académica.</p>
-                    <a href="unidad2/indice_h/indice_h.html" target="_blank" class="btn-access">
+                    <a href="indice_h/indice_h.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -410,7 +410,7 @@
                     </div>
                     <h3 class="activity-title">Método de Secante</h3>
                     <p class="activity-desc">Implementación del método numérico para encontrar raíces mediante aproximación por secantes.</p>
-                    <a href="unidad2/secante/secante.html" target="_blank" class="btn-access">
+                    <a href="secante/secante.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -422,7 +422,7 @@
                     </div>
                     <h3 class="activity-title">Método de Bisección</h3>
                     <p class="activity-desc">Algoritmo de búsqueda de raíces que divide sucesivamente un intervalo a la mitad.</p>
-                    <a href="unidad2/biseccion/biseccion.html" target="_blank" class="btn-access">
+                    <a href="biseccion/biseccion.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -434,22 +434,12 @@
                     </div>
                     <h3 class="activity-title">Método del Punto Fijo</h3>
                     <p class="activity-desc">Técnica iterativa para encontrar puntos fijos de una función en análisis numérico.</p>
-                    <a href="unidad2/punto_fijo/punto_fijo.html" target="_blank" class="btn-access">
+                    <a href="punto_fijo/punto_fijo.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
 
-                <!-- Actividad 5 -->
-                <div class="activity-card">
-                    <div class="activity-icon">
-                        <i class="fas fa-balance-scale"></i>
-                    </div>
-                    <h3 class="activity-title">Método de Regula Falsi</h3>
-                    <p class="activity-desc">Método de interpolación lineal para aproximación de raíces en ecuaciones no lineales.</p>
-                    <a href="unidad2/regula_falsi/regula_falsi.html" target="_blank" class="btn-access">
-                        <i class="fas fa-external-link-alt"></i> Acceder a la actividad
-                    </a>
-                </div>
+                
 
                 <!-- Actividad 6 -->
                 <div class="activity-card">
@@ -458,7 +448,7 @@
                     </div>
                     <h3 class="activity-title">Gradiente de una Función</h3>
                     <p class="activity-desc">Cálculo y visualización del gradiente para análisis de funciones multivariables.</p>
-                    <a href="unidad2/gradiente1_2/gradiente1_2.html" target="_blank" class="btn-access">
+                    <a href="/gradiente1_2/gradiente.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -482,7 +472,7 @@
                     </div>
                     <h3 class="activity-title">Juegos de Supervivencia</h3>
                     <p class="activity-desc">Simulación y análisis de modelos matemáticos aplicados a juegos de supervivencia.</p>
-                    <a href="unidad2/juegos_supervivencia/juegos_supervivencia.html" target="_blank" class="btn-access">
+                    <a href="Supervivencia/supervivencia.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -494,7 +484,7 @@
                     </div>
                     <h3 class="activity-title">Resumen de Artículo</h3>
                     <p class="activity-desc">Síntesis y análisis crítico de artículos científicos sobre métodos numéricos.</p>
-                    <a href="unidad2/resumen_articulo/resumen_articulo.html" target="_blank" class="btn-access">
+                    <a href="unidad2/Lectura/Lectura.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -506,7 +496,7 @@
                     </div>
                     <h3 class="activity-title">Diferenciación Numérica</h3>
                     <p class="activity-desc">Técnicas numéricas para aproximar derivadas de funciones a partir de datos discretos.</p>
-                    <a href="unidad2/diferenciacion_numerica/diferenciacion_numerica.html" target="_blank" class="btn-access">
+                    <a href="diferenciacion_numerica/diferenciacion_numerica.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -518,7 +508,7 @@
                     </div>
                     <h3 class="activity-title">Interpolación</h3>
                     <p class="activity-desc">Métodos de interpolación para estimar valores entre puntos conocidos en conjuntos de datos.</p>
-                    <a href="unidad2/interpolacion/interpolacion.html" target="_blank" class="btn-access">
+                    <a href="Interpolacion/interpolacion.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -530,7 +520,7 @@
                     </div>
                     <h3 class="activity-title">Lighthouse y Apache Meter</h3>
                     <p class="activity-desc">Análisis de rendimiento web utilizando herramientas de evaluación y métricas.</p>
-                    <a href="unidad2/LA/LA.tml" target="_blank" class="btn-access">
+                    <a href="unidad2/LA/apache.tml" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -542,7 +532,7 @@
                     </div>
                     <h3 class="activity-title">Póster - Método Aplicado</h3>
                     <p class="activity-desc">Presentación visual de la aplicación práctica de un método numérico específico.</p>
-                    <a href="unidad2/Poster/Poster.html" target="_blank" class="btn-access">
+                    <a href="Poster/Poster.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -554,7 +544,18 @@
                     </div>
                     <h3 class="activity-title">Eigen Values</h3>
                     <p class="activity-desc">Cálculo y análisis de valores propios en álgebra lineal y sus aplicaciones.</p>
-                    <a href="unidad2/Eigen_values/Eigen_values.html" target="_blank" class="btn-access">
+                    <a href="Eigen_values/Teoria.html" target="_blank" class="btn-access">
+                        <i class="fas fa-external-link-alt"></i> Acceder a la actividad
+                    </a>
+                </div>
+                <!-- Actividad 14 -->
+                <div class="activity-card">
+                    <div class="activity-icon">
+                        <i class="fas fa-cogs"></i>
+                    </div>
+                    <h3 class="activity-title">Eigen Values</h3>
+                    <p class="activity-desc">Cálculo y análisis de valores propios en álgebra lineal y sus aplicaciones.</p>
+                    <a href="Eigen_values/Ejercicios.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -566,7 +567,7 @@
                     </div>
                     <h3 class="activity-title">Book</h3>
                     <p class="activity-desc">Compilación y análisis de contenidos sobre métodos numéricos avanzados.</p>
-                    <a href="unidad2/Book/Book.html" target="_blank" class="btn-access">
+                    <a href="book/book.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
