--- a/unidad_2/Eigen_values/Teoria.html
+++ b/unidad_2/Eigen_values/Teoria.html
@@ -528,12 +528,12 @@
         </p>
 
         <div class="results-grid" style="max-width: 600px; margin: 0 auto;">
-          <a href="unidad_2/Eigen_values/Eigen_values.pdf" target="_blank" class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center;">
+          <a href="Eigen_values.pdf" target="_blank" class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center;">
             <i class="fas fa-file-pdf"></i>
             Ver PDF en nueva pestaña
           </a>
           
-          <a href="unidad_2/Eigen_values/Eigen_values.pdf" download class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center; background: linear-gradient(135deg, var(--accent), var(--primary));">
+          <a href="Eigen_values.pdf" download class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center; background: linear-gradient(135deg, var(--accent), var(--primary));">
             <i class="fas fa-download"></i>
             Descargar PDF
           </a>
