--- a/unidad_2/Lectura/Lectura.html
+++ b/unidad_2/Lectura/Lectura.html
@@ -532,12 +532,12 @@
         </p>
 
         <div class="results-grid" style="max-width: 600px; margin: 0 auto;">
-          <a href="unidad2/Lectura/Lectura.pdf" target="_blank" class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center;">
+          <a href="Lectura.pdf" target="_blank" class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center;">
             <i class="fas fa-file-pdf"></i>
             Ver PDF en nueva pestaña
           </a>
           
-          <a href="unidad2/Lectura/Lectura.pdf" download class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center; background: linear-gradient(135deg, var(--accent), var(--primary));">
+          <a href="Lectura.pdf" download class="btn" style="padding: 15px 30px; font-size: 1rem; justify-content: center; background: linear-gradient(135deg, var(--accent), var(--primary));">
             <i class="fas fa-download"></i>
             Descargar PDF
           </a>
