--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -448,7 +448,7 @@
                     </div>
                     <h3 class="activity-title">Gradiente de una Función</h3>
                     <p class="activity-desc">Cálculo y visualización del gradiente para análisis de funciones multivariables.</p>
-                    <a href="/gradiente1_2/gradiente.html" target="_blank" class="btn-access">
+                    <a href="gradiente1_2/gradiente.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -484,7 +484,7 @@
                     </div>
                     <h3 class="activity-title">Resumen de Artículo</h3>
                     <p class="activity-desc">Síntesis y análisis crítico de artículos científicos sobre métodos numéricos.</p>
-                    <a href="unidad2/Lectura/Lectura.html" target="_blank" class="btn-access">
+                    <a href="Lectura/Lectura.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
@@ -520,7 +520,7 @@
                     </div>
                     <h3 class="activity-title">Lighthouse y Apache Meter</h3>
                     <p class="activity-desc">Análisis de rendimiento web utilizando herramientas de evaluación y métricas.</p>
-                    <a href="unidad2/LA/apache.tml" target="_blank" class="btn-access">
+                    <a href="LA/apache.tml" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
