--- a/unidad_2/unidad2.html
+++ b/unidad_2/unidad2.html
@@ -520,7 +520,7 @@
                     </div>
                     <h3 class="activity-title">Lighthouse y Apache Meter</h3>
                     <p class="activity-desc">Análisis de rendimiento web utilizando herramientas de evaluación y métricas.</p>
-                    <a href="LA/apache.tml" target="_blank" class="btn-access">
+                    <a href="LA/apache.html" target="_blank" class="btn-access">
                         <i class="fas fa-external-link-alt"></i> Acceder a la actividad
                     </a>
                 </div>
